# menv

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: valid_expansion.rs
menv_proc_macro/: Cargo.toml
menv_proc_macro/src/: lib.rs  lit_parse.rs
src/: lib.rs
