[package]
name = "menv"
version = "0.2.0"
edition = "2021"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
description = "Pulling in arguments from environment variables"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
