[package]
name = "menv_proc_macro"
version = "0.1.1"
edition = "2021"
authors = ["Monadic Cat <monad@catmonad.xyz>"]
description = "Internal proc macros for the menv crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Monadic-Cat/menv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
